--- a/index.html
+++ b/index.html
@@ -18,19 +18,34 @@ body {
 Game Programming<br>
 Spring 2022<br>
 410706143 杜宜倢<br>
-聯絡信箱 請點選<a href="rpg55666@gmail.com">
+聯絡信箱 rpg55666@gmail.com<br>
+請點選<a href="mailto:rpg55666@gmail.com">
 <font color="lightblue">這裡</font></a>
 </div>
 <div id="hw">
 	<table border="1" style="margin-left: auto; margin-right: auto;">
 	   <tr align="center">
-			<!-- <td width="33%"><img src="gifs/hw1.gif" width="400px" height="400px"/></td> -->
+			<td width="33%"><img src="" width="400px" height="400px"/></td>
+			<td width="33%"><img src="" width="400px" height="400px"/></td>
+			<td width="33%"><img src="" width="400px" height="400px"/></td>
 		</tr>
 	    
 <tr align="center">
 			<td><a href="hw0/hw0.html">hw0.html</a><br>My Little Engine</td>
+			<td><a href=""></a><br>HW2</td>
+			<td><a href=""></a><br>HW1</td>
 		</tr>
-
+        <tr align="center">
+			<td width="33%"><img src="" width="400px" height="400px"/></td>
+			<td width="33%"><img src="" width="400px" height="400px"/></td>
+			<td width="33%"><img src="" width="400px" height="400px"/></td>
+		</tr>
+	    
+<tr align="center">
+			<td><a href=""></a><br>HW3</td>
+			<td><a href=""></a><br>HW4</td>
+			<td><a href=""></a><br>HW5</td>
+		</tr>
 	</table>
 </div>
 </body>
