--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Spring 2022<br>
 <div id="hw">
 	<table border="1" style="margin-left: auto; margin-right: auto;">
 	   <tr align="center">
-			<td width="33%"><img src="" width="400px" height="400px"/></td>
+			<td width="33%"><img src="hw0/hw0.gif" width="400px" height="400px"/></td>
 			<td width="33%"><img src="" width="400px" height="400px"/></td>
 			<td width="33%"><img src="" width="400px" height="400px"/></td>
 		</tr>
