--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@ Spring 2022<br>
 	<table border="1" style="margin-left: auto; margin-right: auto;">
 	   <tr align="center">
 			<td width="33%"><img src="hw0/hw0.gif" width="400px" height="400px"/></td>
-			<td width="33%"><img src="" width="400px" height="400px"/></td>
+			<td width="33%"><img src="hw1/hw1.gif" width="400px" height="400px"/></td>
 			<td width="33%"><img src="" width="400px" height="400px"/></td>
 		</tr>
 	    
 <tr align="center">
 			<td><a href="hw0/hw0.html">hw0.html</a><br>My Little Engine</td>
-			<td><a href=""></a><br>HW2</td>
+			<td><a href="hw1/hw1.html">hw1.html</a><br>Game Physics</td>
 			<td><a href=""></a><br>HW1</td>
 		</tr>
         <tr align="center">
