--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@ Spring 2022<br>
 	   <tr align="center">
 			<td width="33%"><img src="hw0/hw0.gif" width="400px" height="400px"/></td>
 			<td width="33%"><img src="hw1/hw1.gif" width="400px" height="400px"/></td>
-			<td width="33%"><img src="" width="400px" height="400px"/></td>
+			<td width="33%"><img src="hw2/hw2.gif" width="400px" height="400px"/></td>
 		</tr>
 	    
 <tr align="center">
 			<td><a href="hw0/hw0.html">hw0.html</a><br>My Little Engine</td>
 			<td><a href="hw1/hw1.html">hw1.html</a><br>Game Physics</td>
-			<td><a href=""></a><br>HW1</td>
+			<td><a href="hw2/hw2.html">hw2.html</a><br>Character Animation</td>
 		</tr>
         <tr align="center">
 			<td width="33%"><img src="" width="400px" height="400px"/></td>
