--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@ Spring 2022<br>
 			<td><a href="hw2/hw2.html">hw2.html</a><br>Character Animation</td>
 		</tr>
         <tr align="center">
-			<td width="33%"><img src="" width="400px" height="400px"/></td>
+			<td width="33%"><img src="hw3/hw3.gif" width="400px" height="400px"/></td>
 			<td width="33%"><img src="" width="400px" height="400px"/></td>
 			<td width="33%"><img src="" width="400px" height="400px"/></td>
 		</tr>
 	    
 <tr align="center">
-			<td><a href=""></a><br>HW3</td>
+			<td><a href="hw3/hw3.html">hw3.html</a><br>Applying Character Animation</td>
 			<td><a href=""></a><br>HW4</td>
 			<td><a href=""></a><br>HW5</td>
 		</tr>
