--- a/hw3/hw3.html
+++ b/hw3/hw3.html
@@ -33,7 +33,7 @@
 <script>
  var camera, scene, renderer, clock = new THREE.Clock();
 
- var model, head, body, rHand, Lhand, rLeg, lLeg;
+ var model, head, body, rHand, lHand, rLeg, lLeg;
 
  var isSwitch = false;
 
