--- a/hw4/hw4.html
+++ b/hw4/hw4.html
@@ -4,8 +4,11 @@
   <style>
     #info {
       position: absolute;
-      width: 100vw;
+      top: 0px;
+      width: 100%;
+      padding: 10px;
       text-align: center;
+      color: #ffff00
     }
 
     body {
@@ -14,121 +17,220 @@
   </style>
 
 <body>
-  <div id="info">
-    <h1 style='color:pink'>Thomas Train </h1>
-    <button id='start'>start</button>
-  </div>
+  <div id="info">OBJ loader, NPC Steering</div>
   <script src="https://threejs.org/build/three.min.js"></script>
-	<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
-	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="https://raw.githack.com/mrdoob/three.js/dev/examples/js/loaders/MTLLoader.js"></script>
-	<script src="https://raw.githack.com/mrdoob/three.js/dev/examples/js/loaders/OBJLoader.js"></script>
+  <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://raw.githack.com/mrdoob/three.js/dev/examples/js/loaders/MTLLoader.js"></script>
+  <script src="https://jyunming-chen.github.io/tutsplus/js/KeyboardState.js"></script>
+  <script src="https://raw.githack.com/mrdoob/three.js/dev/examples/js/loaders/OBJLoader.js"></script>
+  <script src="steve.js"></script>
+  <script src="keyframe.js"></script>
   <script type="module">
+    (function () {
+      Math.clamp = function (val, min, max) {
+        return Math.min(Math.max(val, min), max);
 
-    var camera, scene, renderer, controls;
-    var train, angle = 0, clock, status = 0;
-    var times = 0, start = false;
+      }
+    })();
+
+    function readModel(modelName, targetSize = 80) {
+      var onProgress = function (xhr) {
+        if (xhr.lengthComputable) {
+          var percentComplete = xhr.loaded / xhr.total * 100;
+          console.log(Math.round(percentComplete, 2) + '% downloaded');
+        }
+      };
+
+      var onError = function (xhr) { };
+
+      var mtlLoader = new THREE.MTLLoader();
+      mtlLoader.setPath('model/');
+      mtlLoader.load(modelName + '.mtl', function (materials) {
+        materials.preload();
+
+        var objLoader = new THREE.OBJLoader();
+        objLoader.setMaterials(materials);
+        objLoader.setPath('model/');
+        objLoader.load(modelName + '.obj', function (object) {
+
+          let theObject = unitize(object, targetSize);
+          theObject.rotation.y = Math.PI;
+          //theObject.add(new THREE.BoxHelper(theObject));
+          theObject.name = 'OBJ'
+
+          bus = new THREE.Object3D();
+          bus.add(theObject);
+          bus.position.y = 10;
+
+          scene.add(bus);
+
+        }, onProgress, onError);
+
+      });
+
+    }
+
+    function unitize(object, targetSize) {
+
+      // find bounding box of 'object'
+      var box3 = new THREE.Box3();
+      box3.setFromObject(object);
+      var size = new THREE.Vector3();
+      size.subVectors(box3.max, box3.min);
+      var center = new THREE.Vector3();
+      center.addVectors(box3.max, box3.min).multiplyScalar(0.5);
+
+      console.log('center: ' + center.x + ', ' + center.y + ', ' + center.z);
+      console.log('size: ' + size.x + ', ' + size.y + ', ' + size.z);
+
+      // uniform scaling according to objSize
+      var objSize = Math.max(size.x, size.y, size.z);
+      var scaleSet = targetSize / objSize;
+
+      var theObject = new THREE.Object3D();
+      theObject.add(object);
+      object.scale.set(scaleSet, scaleSet, scaleSet);
+      object.position.set(-center.x * scaleSet, center.y * scaleSet / 6, -center.z * scaleSet);
+      return theObject;
+    }
+
+    class Agent {
+      constructor(pos, group) {
+        this.pos = pos.clone();
+        this.vel = new THREE.Vector3();
+        this.force = new THREE.Vector3();
+        this.target = null;
+        this.size = 3;
+        this.model = group;
+        scene.add(group);
+
+        this.MAXSPEED = 20;
+        this.ARRIVAL_R = 10;
+
+        // for orientable agent
+        this.angle = 0;
+      }
+
+      update(dt) {
+        this.accumulateForce();
+        this.vel.add(this.force.clone().multiplyScalar(dt));
+
+        // ARRIVAL: velocity modulation
+        if (this.target !== null) {
+          let dst = this.target.distanceTo(this.pos);
+          if (dst < this.ARRIVAL_R) {  // close enough
+            this.vel.setLength(dst);
+          }
+        }
+
+        // MAXSPEED modulation
+        let speed = this.vel.length()
+        this.vel.setLength(Math.clamp(speed, 0, this.MAXSPEED))
+        this.pos.add(this.vel.clone().multiplyScalar(dt))
+        this.model.position.copy(this.pos)
+        this.model.position.y = 10;
+
+        // for orientable agent
+        // non PD version
+        if (this.vel.length() > 0.1) {
+          this.angle = Math.atan2(-this.vel.z, this.vel.x)+Math.PI/2;
+          this.model.rotation.y = this.angle
+        }
+      }
+
+      setTarget(x, y, z) {
+        if (this.target !== null)
+          this.target.set(x, y, z);
+        else {
+          this.target = new THREE.Vector3(x, y, z);
+        }
+      }
+
+      targetInducedForce(targetPos) { // seek
+        return targetPos.clone().sub(this.pos).setLength(this.MAXSPEED).sub(this.vel);
+      }
+
+      accumulateForce() {
+        if (this.target)
+          this.force.copy(this.targetInducedForce(this.target));
+      }
+
+    }
+
+
+    ////////////////////
+    var camera, scene, renderer, clock;
+    var raycaster;
+    var mouse = new THREE.Vector2();
+    var pickables = [];
+    var agent;
+    var targetMesh;
+    var bus, modelCreate = false;
+    var model, head, body, rHand, lHand, rLeg, lLeg;
+    var keyboard = new KeyboardState();
+    var pos = new THREE.Vector3();
+    var vel = new THREE.Vector3();
+    var force = new THREE.Vector3();
+    var power, angle;
 
     init();
     animate();
 
+    // function agentMesh() {
+    //   // mesh facing +x
 
-    $('#start').click(function () {
-      if (times == 0) {
-        clamp();
-        times = 1;
-      }
-      else if (times == 1) {
-        clamp1();
-        times = 0;
-      }
-    });
+    //   let points = [];
 
-    function clamp() {
-      start = true;
-      $('#start').text('start');
-      $('#stop').text('stop');
-    }
+    //   points.push(new THREE.Vector3(10, 0, 0), new THREE.Vector3(0, 0, -3),
+    //     new THREE.Vector3(0, 0, 3), new THREE.Vector3(0, 3, 0));
+    //   let geometry = new THREE.BufferGeometry().setFromPoints(points);
 
-    function clamp1() {
-      start = false;
-      $('#start').text('stop');
-      $('#stop').text('start');
-    }
+    //   let indices = [];
+    //   indices.push(0, 3, 2, 0, 2, 1, 1, 3, 0, 1, 2, 3);
+    //   geometry.setIndex(indices);
+    //   geometry.computeVertexNormals();
+    //   return new THREE.Mesh(geometry,
+    //     new THREE.MeshBasicMaterial({ color: 'cyan', wireframe: true }))
+    // }
 
-    function readModel (modelName, targetSize=40) {
-    	var onProgress = function(xhr) {
-    	if (xhr.lengthComputable) {
-    		var percentComplete = xhr.loaded / xhr.total * 100;
-    			console.log(Math.round(percentComplete, 2) + '% downloaded');
-    		}
-    	};
+    function initModel() {
+      head = buildHead();
+      body = buildBody();
+      rHand = buildHandLeg('hand');
+      lHand = buildHandLeg('hand');
+      rLeg = buildHandLeg('leg');
+      lLeg = buildHandLeg('leg');
 
-    	var onError = function(xhr) {};
+      model = new THREE.Group();
+      model.add(head);
+      head.position.y = 3 * size / 2 + 2 * size / 2;
+      model.add(body);
+      model.add(rHand);
+      rHand.position.x = 2 * size / 2 + size / 2;
+      rHand.position.y = size * 3 / 2;
+      model.add(lHand);
+      lHand.position.x = -2 * size / 2 - size / 2;
+      lHand.position.y = size * 3 / 2;
+      model.add(rLeg);
+      rLeg.position.x = size / 2;
+      rLeg.position.y = -3 * size / 2;
+      model.add(lLeg);
+      lLeg.position.x = -size / 2;
+      lLeg.position.y = -3 * size / 2;
 
-    	var mtlLoader =  new THREE.MTLLoader();
-    	mtlLoader.setPath('model/');
-    	mtlLoader.load(modelName+'.mtl', function(materials) {
-    		materials.preload();
-
-    		var objLoader =  new THREE.OBJLoader();
-    		objLoader.setMaterials(materials);
-    		objLoader.setPath('model/');
-    		objLoader.load(modelName+'.obj', function(object) {
-
-    		let theObject =  unitize (object, targetSize);
-    		//theObject.add(new THREE.BoxHelper(theObject));
-    		theObject.name = 'OBJ'
-
-    		train = new THREE.Object3D();
-    		train.add(theObject);
-    		train.rotation.y = Math.PI/2;
-
-    		scene.add (train);
-    		//train.position.set(0,10,0);
-
-    		}, onProgress, onError);
-
-    	});
-
-    }
-
-    function unitize (object, targetSize) {  
-
-    	// find bounding box of 'object'
-    	var box3 = new THREE.Box3();
-    	box3.setFromObject (object);
-    	var size = new THREE.Vector3();
-    	size.subVectors (box3.max, box3.min);
-    	var center = new THREE.Vector3();
-    	center.addVectors(box3.max, box3.min).multiplyScalar (0.5);
-
-    	console.log ('center: ' + center.x + ', '+center.y + ', '+center.z );
-    	console.log ('size: ' + size.x + ', ' +  size.y + ', '+size.z );
-
-    	// uniform scaling according to objSize
-    	var objSize = Math.max (size.x, size.y, size.z);
-    	var scaleSet = targetSize/objSize;
-
-    	var theObject =  new THREE.Object3D();
-    	theObject.add (object);
-    	object.scale.set (scaleSet, scaleSet, scaleSet);
-    	object.position.set (-center.x*scaleSet, center.y*scaleSet/6, -center.z*scaleSet);
-    	return theObject;
+      model.position.y = 3 * size / 2 + 3 * size;
+      model.rotation.y = Math.PI;
+      return model;
     }
 
     function init() {
-      scene = new THREE.Scene();
+
       clock = new THREE.Clock();
+      scene = new THREE.Scene();
 
-      camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 1, 1000);
-      camera.position.z = 300;
-      camera.position.y = 50;
-
-      renderer = new THREE.WebGLRenderer({ antialias: true });
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      renderer.setClearColor(0x888888);
-
+      var ambient = new THREE.AmbientLight(0x444444);
+      scene.add(ambient);
       var directionalLight = new THREE.DirectionalLight(0xffffff);
       directionalLight.position.set(0, 0, 1).normalize();
       scene.add(directionalLight);
@@ -137,82 +239,158 @@
       pointLight.position.set(100, 200, -100);
       scene.add(pointLight);
 
-      controls = new THREE.OrbitControls(camera, renderer.domElement);
-      controls.target = new THREE.Vector3(0, 0, 0);
-      //controls.autoRotate = true;
+      camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 1, 1000);
+      camera.position.z = 120;
+      camera.position.y = 100;
+
+      var gridXZ = new THREE.GridHelper(240, 24, 'red', 'white');
+      scene.add(gridXZ);
+
+      renderer = new THREE.WebGLRenderer();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      renderer.setClearColor(0x888888);
+
+      let controls = new THREE.OrbitControls(camera, renderer.domElement);
+
+      controls.enableKeys = false;
 
       document.body.appendChild(renderer.domElement);
 
+      /////////////////////////////////////////////////////////////////////
+      let plane = new THREE.Mesh(new THREE.PlaneGeometry(200, 200), new THREE.MeshBasicMaterial({
+        transparent: true,
+        opacity: 0.5,
+        visible: true
+      }));
+      scene.add(plane);
+      plane.material.visible = false
+      plane.rotation.x = -Math.PI / 2;
+      pickables = [plane];
 
-      let gridXZ = new THREE.GridHelper(200, 20, 'red', 'white');
-      scene.add(gridXZ);
+      // let loader = new THREE.TextureLoader();
+      // let tex = loader.load("https://i.imgur.com/GmthNU8.png");
+      // targetMesh = new THREE.Mesh(new THREE.CircleGeometry(10, 20), new THREE.MeshBasicMaterial({
+      //   map: tex,
+      //   transparent: true
+      // }));
+      // scene.add(targetMesh);
+      // targetMesh.rotation.x = -Math.PI / 2
 
-      //火車
-      readModel('bus1');
-      //train.rotation.y = Math.PI/2;
-      train = new THREE.Mesh(new THREE.BoxGeometry(10,10,30),new THREE.MeshNormalMaterial());
+      raycaster = new THREE.Raycaster();
+      document.addEventListener('pointerdown', onDocumentMouseDown, false);
+      ////////////////////////
+      //agent = new Agent(new THREE.Vector3(-100 + 200 * Math.random(), 0, -100 + 200 * Math.random()), mesh);
+      agent = new Agent(new THREE.Vector3(-100 + 200 * Math.random(), 10, -100 + 200 * Math.random()), initModel());
+
+      bus = new THREE.Mesh(new THREE.BoxGeometry(10, 10, 30), new THREE.MeshNormalMaterial());
+
+      window.addEventListener('resize', onWindowResize, false);
+
+      power = 0.0;
+      angle = 0.0;
+    }
+
+    function onWindowResize() {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    }
+
+    function onDocumentMouseDown(event) {
+
+      event.preventDefault();
+      mouse.x = (event.clientX / window.innerWidth) * 2 - 1;
+      mouse.y = -(event.clientY / window.innerHeight) * 2 + 1;
+
+      power = 0.0;
+      angle = 0.0;
+
+      if (modelCreate === false) {
+        modelCreate = true;
+        readModel('bus1');
+      }
+
+      // find intersections
+      raycaster.setFromCamera(mouse, camera);
+      var intersects = raycaster.intersectObjects(pickables);
+      if (intersects.length > 0) {
+        pos.x = intersects[0].point.x;
+        pos.y = 10;
+        pos.z = intersects[0].point.z;
+        bus.position.copy(intersects[0].point);
+        bus.position.y = 10;
+        agent.setTarget(intersects[0].point.x, intersects[0].point.y, intersects[0].point.z + 20);
+      }
+
+    }
+
+    function update(dt) {
+
+      keyboard.update();
+
+      if (keyboard.pressed("up"))
+        power += 0.8;
+      if (keyboard.pressed("down")) {
+        if (power > 0) {
+          power -= 0.8;
+        }
+      }
+
+      if (power != 0) {
+        power = Math.clamp(power, 0.8, 30.0);
+
+      }
+
+      if (keyboard.pressed("left"))
+        angle += 0.01;
+      if (keyboard.pressed("right"))
+        angle -= 0.01;
+
+      vel = new THREE.Vector3(power, 0, 0).applyAxisAngle(new THREE.Vector3(0, 1, 0), angle);
+      pos.add(vel.clone().multiplyScalar(dt));
+
+      pos.y = 3 * size / 2 + 3 * size;
     }
 
     function animate() {
-      var radius = 45;
+      keyboard.update();
+      if (keyboard.down('space')) {
+        power = 0.8;
+      } else if (keyboard.up('space')) {
 
-      //train.position.set(radius* Math.cos(angle),10, -radius* Math.sin(angle));
-      //train.rotation.y = angle;
-
-      var dt = clock.getDelta();
-      //angle+=2*0.10472*dt;
-
-      if (start == true) {
-        if (status == 0) {
-          train.position.set(radius * Math.cos(angle) + 45, 10, -radius * Math.sin(angle));
-          train.rotation.y = angle;
-
-          angle += 2 * 0.10472 * dt;
-
-          angle += 0.03;
-
-
-          if (train.position.x < 45)
-            status = 1;
-        }
-        else if (status == 1) {
-          //train.position.set(train.position.x - 1 , 0 , train.position.z);
-          train.position.x -= 2 * 0.10472;
-
-          train.position.x -= 0.9;
-
-
-          if (train.position.x < -45)
-            status = 2;
-        }
-        else if (status == 2) {
-          train.position.set(radius * Math.cos(angle) - 45, 10, -radius * Math.sin(angle));
-          train.rotation.y = angle;
-          angle += 2 * 0.10472 * dt;
-
-
-          angle += 0.03;
-
-          if (train.position.x > -45)
-            status = 3;
-        }
-        else if (status == 3) {
-          //train.position.set(train.position.x + 1 , 0 , train.position.z);
-          train.position.x += 2 * 0.10472;
-
-
-          train.position.x += 0.9;
-
-          if (train.position.x > 45)
-            status = 0;
-        }
       }
-      controls.update();
+
+      if (modelCreate === true) {
+        agent.setTarget(bus.position.x, bus.position.y, bus.position.z + 20);
+      }
+
+      let dt = clock.getDelta();
+      update(dt);
+      agent.update(dt);
+      bus.position.copy(pos);
+
+      bus.rotation.y = angle + Math.PI / 2;
+
+      if (agent.vel.length()>0.1) {
+        let motion = keyframe(clock.getElapsedTime());
+        lLeg.rotation.x = motion[0];
+        rLeg.rotation.x = motion[1];
+        rHand.rotation.x = motion[0];
+        lHand.rotation.x = motion[1];
+      } else {
+        lLeg.rotation.x = 0;
+        rLeg.rotation.x = 0;
+        rHand.rotation.x = 0;
+        lHand.rotation.x = 0;
+      }
 
       requestAnimationFrame(animate);
-      renderer.render(scene, camera);
+      render();
     }
 
+    function render() {
+      renderer.render(scene, camera);
+    }
 
   </script>
 </body>
