--- a/hw4/hw4.html
+++ b/hw4/hw4.html
@@ -220,7 +220,7 @@
       lLeg.position.y = -3 * size / 2;
 
       model.position.y = 3 * size / 2 + 3 * size;
-      model.rotation.y = Math.PI;
+      //model.rotation.y = Math.PI;
       return model;
     }
 
