--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@ Spring 2022<br>
 		</tr>
         <tr align="center">
 			<td width="33%"><img src="hw3/hw3.gif" width="400px" height="400px"/></td>
-			<td width="33%"><img src="" width="400px" height="400px"/></td>
+			<td width="33%"><img src="hw4/hw4.gif" width="400px" height="400px"/></td>
 			<td width="33%"><img src="" width="400px" height="400px"/></td>
 		</tr>
 	    
 <tr align="center">
 			<td><a href="hw3/hw3.html">hw3.html</a><br>Applying Character Animation</td>
-			<td><a href=""></a><br>HW4</td>
+			<td><a href="hw4/hw4.html">hw4.html</a><br>OBJ loader, NPC Steering</td>
 			<td><a href=""></a><br>HW5</td>
 		</tr>
 	</table>
