--- a/hw4/hw4.html
+++ b/hw4/hw4.html
@@ -26,7 +26,7 @@
   <script src="https://raw.githack.com/mrdoob/three.js/dev/examples/js/loaders/OBJLoader.js"></script>
   <script src="steve.js"></script>
   <script src="keyframe.js"></script>
-  <script type="module">
+  <script>
     (function () {
       Math.clamp = function (val, min, max) {
         return Math.min(Math.max(val, min), max);
@@ -63,7 +63,7 @@
           bus.add(theObject);
           bus.position.y = 10;
 
-          scene.add(bus);
+          
 
         }, onProgress, onError);
 
@@ -175,6 +175,7 @@
     var power, angle;
 
     init();
+    readModel('bus1');
     animate();
 
     // function agentMesh() {
@@ -307,7 +308,7 @@
 
       if (modelCreate === false) {
         modelCreate = true;
-        readModel('bus1');
+        scene.add(bus);
       }
 
       // find intersections
